testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment6.errors.txt
a.js(7,12): error TS2304: Cannot find name 'Foo'.


==== a.js (1 errors) ====
    /**
     * @typedef {Object} Foo
     * @property {number} a
     * @property {number} b
     */
    
    /** @type {Foo} */
               ~~~
!!! error TS2304: Cannot find name 'Foo'.
    export default { a: 1, b: 1, c: 1 };
    
==== b.js (0 errors) ====
    import a from "./a";
    a;
    